Improve label clarity and formatting in input fields and results section of the Virial Equation Calculator

--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
                 <input type="number" id="T_val" value="300">
             </div>
             <div class="input-group">
-                <label for="P_val" class="block text-sm mb-1">Presión (P en atm):</label>
+                <label for="P_val" class="block text-sm mb-1">Presión (P en atm) :</label>
                 <input type="number" id="P_val" value="10">
             </div>
             <div class="input-group">
-                <label for="B_val" class="block text-sm mb-1">Coeficiente Virial :</label>
+                <label for="B_val" class="block text-sm mb-1">Coeficiente Virial (B):</label>
                 <input type="number" id="B_val" value="-0.02" step="0.001">
             </div>
             <div class="input-group col-span-1 md:col-span-2">
-                <label for="C_val" class="block text-sm mb-1">Coeficiente Virial :</label>
+                <label for="C_val" class="block text-sm mb-1">Coeficiente Virial (C):</label>
                 <input type="number" id="C_val" value="0.001" step="0.0001">
             </div>
         </div>
@@ -52,15 +52,15 @@
         <div id="results" class="results-box hidden">
             <h3 class="text-xl font-bold mb-4">Resultados del Cálculo:</h3>
             <div class="result-item">
-                <strong>Volumen Gas Ideal :</strong>
+                <strong>Volumen Gas Ideal ($V_{ideal}$):</strong>
                 <span id="vIdealOutput"></span>
             </div>
             <div class="result-item">
-                <strong>Volumen Gas Real :</strong>
+                <strong>Volumen Gas Real ($V_{real}$):</strong>
                 <span id="vRealOutput"></span>
             </div>
             <div class="result-item">
-                <strong>Factor de Compresibilidad :</strong>
+                <strong>Factor de Compresibilidad (Z):</strong>
                 <span id="zFactorOutput"></span>
             </div>
             <div class="result-item">
