Refactor pressure label for clarity in the Virial Equation Calculator

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <input type="number" id="T_val" value="300">
             </div>
             <div class="input-group">
-                <label for="P_val" class="block text-sm mb-1">Presión (P en atm) :</label>
+                <label for="P_val" class="block text-sm mb-1">Presión :</label>
                 <input type="number" id="P_val" value="10">
             </div>
             <div class="input-group">
