Update title and header for clarity in the Virial Equation Calculator

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculadora de Ecuación Virial (Dark Mode)</title>
+    <title>Calculadora de Volumen y Factor de Compresibilidad</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="styles.css">
     <script src="main.js"></script>
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <h1 class="text-3xl font-extrabold text-center mb-6">
-            <span class="text-indigo-400">Calculadora</span> de Ecuación Virial
+            <span class="text-indigo-400">Calculadora</span> de Volumen y Factor de Compresibilidad
         </h1>
         <p class="text-center mb-8">
             Ingrese los parámetros para calcular el volumen de un gas real usando la ecuación virial
