Update color scheme and improve text clarity in the Virial Equation Calculator

--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
     <link rel="stylesheet" href="styles.css">
     <script src="main.js"></script>
 </head>
-<body>
-    <div class="container">
+<body>    <div class="container">
         <h1 class="text-3xl font-extrabold text-center mb-6">
-            <span class="text-indigo-400">Calculadora</span> de Volumen y Factor de Compresibilidad
+            <span class="text-pink-400">Calculadora</span> de Volumen y Factor de Compresibilidad
         </h1>
         <p class="text-center mb-8">
             Ingrese los parámetros para calcular el volumen de un gas real usando la ecuación virial
